--- a/Activity1.html
+++ b/Activity1.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>HTML links</h1>
-        <p>Play hundreds of games<a href="https://www.roblox.com/"></a></p>
+        <p>Play hundreds of games<a href="https://roblox.com/"></a></p>
     </body>
 </html>
